--- a/templates/resume_base.html
+++ b/templates/resume_base.html
@@ -79,15 +79,46 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'dashboard' %}">
-          <i class="bi bi-paperclip"></i><span>Applications</span>
+        <a class="nav-link collapsed" href="{% url 'personal_information_list' %}">
+          <i class="bi bi-person"></i><span>Personal Information</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'dashboard' %}">
-          <i class="bi bi-briefcase"></i><span>Job Listings</span>
+        <a class="nav-link collapsed" href="{% url 'work_experience_list' %}">
+          <i class="bi bi-briefcase"></i><span>Work Experience</span>
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="{% url 'education_list' %}">
+          <i class="bi bi-mortarboard"></i><span>Education</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="{% url 'project_list' %}">
+          <i class="bi bi-folder"></i><span>Projects</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="{% url 'certification_list' %}">
+          <i class="bi bi-award"></i><span>Certifications</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="{% url 'award_list' %}">
+          <i class="bi bi-trophy"></i><span>Awards</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="{% url 'language_list' %}">
+          <i class="bi bi-translate"></i><span>Languages</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="{% url 'technical_skill_list' %}">
+          <i class="bi bi-code-slash"></i><span>Technical Skills</span>
+        </a>
+      </li>
+
       <li class="nav-item">
         <a class="nav-link collapsed" href="{% url 'dashboard' %}">
         </a>
