Add authentication system and resume builder features

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Login - NiceAdmin Bootstrap Template</title>
+    <title>Password Reset - DiamondTalent</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,15 +43,15 @@
                         <div class="d-flex justify-content-center py-4">
                             <a href="/" class="logo d-flex align-items-center w-auto">
                                 <img src="{% static 'img/logo1.png' %}" alt="">
-                                <span class="d-none d-lg-block">NiceAdmin</span>
+                                <span class="d-none d-lg-block">DiamondTalent</span>
                             </a>
                         </div><!-- End Logo -->
 
                         <div class="card mb-3">
                             <div class="card-body">
                                 <div class="pt-4 pb-2">
-                                    <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                                    <p class="text-center small">Enter your credentials to login</p>
+                                    <h5 class="card-title text-center pb-0 fs-4">Reset Your Password</h5>
+                                    <p class="text-center small">Enter your email address to receive a password reset link</p>
                                 </div>
 
                                 {% if form.errors %}
@@ -60,15 +60,18 @@
                                 </div>
                                 {% endif %}
 
-                                <form method="post" action="{% url 'account_login' %}" class="row g-3 needs-validation"
+                                <form method="post" action="{% url 'account_reset_password' %}" class="row g-3 needs-validation"
                                       novalidate>
                                     {% csrf_token %}
-                                                                        {{ form.as_p }}
-
-
+                                    <div class="col-12">
+                                        <label for="id_email" class="form-label">Email Address</label>
+                                        <input type="email" name="email" class="form-control" id="id_email"
+                                               placeholder="Enter your email address" required>
+                                        <div class="invalid-feedback">Please enter your email address.</div>
+                                    </div>
 
                                     <div class="col-12">
-                                        <button class="btn btn-primary w-100" type="submit">Login</button>
+                                        <button class="btn btn-primary w-100" type="submit">Send Reset Link</button>
                                     </div>
                                 </form>
 
