--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Login - NiceAdmin Bootstrap Template</title>
+    <title>Sign Up - DiamondTalent</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,15 +43,15 @@
                         <div class="d-flex justify-content-center py-4">
                             <a href="/" class="logo d-flex align-items-center w-auto">
                                 <img src="{% static 'img/logo1.png' %}" alt="">
-                                <span class="d-none d-lg-block">NiceAdmin</span>
+                                <span class="d-none d-lg-block">DiamondTalent</span>
                             </a>
                         </div><!-- End Logo -->
 
                         <div class="card mb-3">
                             <div class="card-body">
                                 <div class="pt-4 pb-2">
-                                    <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                                    <p class="text-center small">Enter your credentials to login</p>
+                                    <h5 class="card-title text-center pb-0 fs-4">Create Your Account</h5>
+                                    <p class="text-center small">Fill in your details to create an account</p>
                                 </div>
 
                                 {% if form.errors %}
