--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Login - NiceAdmin Bootstrap Template</title>
+    <title>Login - DiamondTalent</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
                         <div class="d-flex justify-content-center py-4">
                             <a href="/" class="logo d-flex align-items-center w-auto">
                                 <img src="{% static 'img/logo1.png' %}" alt="">
-                                <span class="d-none d-lg-block">NiceAdmin</span>
+                                <span class="d-none d-lg-block">DiamondTalent</span>
                             </a>
                         </div><!-- End Logo -->
 
