--- a/templates/resume_base.html
+++ b/templates/resume_base.html
@@ -74,7 +74,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'dashboard' %}">
+        <a class="nav-link {% if request.path|slice:':8' == '/web/resu' %}active{% else %}collapsed{% endif %}" href="{% url 'resume_list' %}">
           <i class="bi bi-file-earmark-text"></i><span>Resumes</span>
         </a>
       </li>
