--- a/templates/resume_builder/personal_information/personal_information_detail.html
+++ b/templates/resume_builder/personal_information/personal_information_detail.html
@@ -103,18 +103,24 @@ Personal Information Detail—Resume Builder
                 </div>
             </div>
 
-            {% if personal_information.profile_picture %}
-            <div class="row mt-4">
-                <div class="col-12">
-                    <h5>Profile Picture</h5>
-                    <img src="{{ personal_information.profile_picture.url }}" alt="Profile Picture" class="img-thumbnail" style="max-width: 200px;">
-                </div>
-            </div>
-            {% endif %}
+
 
             <div class="mt-4">
                 <a href="{% url 'personal_information_update' personal_information.pk %}" class="btn btn-warning">Edit</a>
                 <a href="{% url 'personal_information_list' %}" class="btn btn-secondary">Back to List</a>
+                {% if personal_information.resume %}
+                <div class="mt-3">
+                    <h6><i class="bi bi-download"></i> Download Resume</h6>
+                    <div class="d-flex gap-2">
+                        <a href="{% url 'resume_download_pdf' personal_information.resume.pk %}" class="btn btn-danger btn-sm">
+                            <i class="bi bi-file-pdf"></i> Download as PDF
+                        </a>
+                        <a href="{% url 'resume_download_docx' personal_information.resume.pk %}" class="btn btn-primary btn-sm">
+                            <i class="bi bi-file-word"></i> Download as DOCX
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
