Add fifth default resume template and fix DOCX export errors. Resolve model field issues and update migrations for resume builder.

--- a/templates/resume_base.html
+++ b/templates/resume_base.html
@@ -74,48 +74,48 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link {% if request.path|slice:':8' == '/web/resu' %}active{% else %}collapsed{% endif %}" href="{% url 'resume_list' %}">
+        <a class="nav-link {% if request.path|slice:':8' == '/web/resu' %}active{% else %}collapsed{% endif %}" href="{% url 'resume_builder_web:resume_list' %}">
             <i class="bi bi-file-earmark-text"></i><span>Resumes</span>
         </a>
     </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'personal_information_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:personal_information_list' %}">
           <i class="bi bi-person"></i><span>Personal Information</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'work_experience_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:work_experience_list' %}">
           <i class="bi bi-briefcase"></i><span>Work Experience</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'education_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:education_list' %}">
           <i class="bi bi-mortarboard"></i><span>Education</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'project_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:project_list' %}">
           <i class="bi bi-folder"></i><span>Projects</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'certification_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:certification_list' %}">
           <i class="bi bi-award"></i><span>Certifications</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'award_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:award_list' %}">
           <i class="bi bi-trophy"></i><span>Awards</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'language_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:language_list' %}">
           <i class="bi bi-translate"></i><span>Languages</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'technical_skill_list' %}">
+        <a class="nav-link collapsed" href="{% url 'resume_builder_web:technical_skill_list' %}">
           <i class="bi bi-code-slash"></i><span>Technical Skills</span>
         </a>
       </li>
@@ -128,6 +128,16 @@
   </aside>
 
   <main id="main" class="main">
+    {% if messages %}
+      <div class="container mt-3">
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
     {% block content %}{% endblock %}
   </main>
 
