--- a/templates/resume_builder/award/award_list.html
+++ b/templates/resume_builder/award/award_list.html
@@ -4,7 +4,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h3>My Awards</h3>
-        <a href="{% url 'award_create' %}" class="btn btn-primary">Add New</a>
+        <a href="{% url 'resume_builder_web:award_create' %}" class="btn btn-primary">Add New</a>
     </div>
     <div class="card shadow">
         <div class="card-body">
@@ -28,9 +28,9 @@
                         <td>{{ award.get_category_display }}</td>
                         <td>{{ award.is_visible|yesno:"Yes,No" }}</td>
                         <td>
-                            <a href="{% url 'award_detail' award.pk %}" class="btn btn-sm btn-info">View</a>
-                            <a href="{% url 'award_update' award.pk %}" class="btn btn-sm btn-warning">Edit</a>
-                            <a href="{% url 'award_delete' award.pk %}" class="btn btn-sm btn-danger">Delete</a>
+                            <a href="{% url 'resume_builder_web:award_detail' award.pk %}" class="btn btn-sm btn-info">View</a>
+                            <a href="{% url 'resume_builder_web:award_update' award.pk %}" class="btn btn-sm btn-warning">Edit</a>
+                            <a href="{% url 'resume_builder_web:award_delete' award.pk %}" class="btn btn-sm btn-danger">Delete</a>
                         </td>
                     </tr>
                     {% empty %}
