--- a/templates/resume_builder/certification/certification_list.html
+++ b/templates/resume_builder/certification/certification_list.html
@@ -4,7 +4,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h3>My Certifications</h3>
-        <a href="{% url 'certification_create' %}" class="btn btn-primary">Add New</a>
+        <a href="{% url 'resume_builder_web:certification_create' %}" class="btn btn-primary">Add New</a>
     </div>
     <div class="card shadow">
         <div class="card-body">
@@ -28,9 +28,9 @@
                         <td>{{ cert.expiration_date|default:"No expiration" }}</td>
                         <td>{{ cert.credential_id|default:"-" }}</td>
                         <td>
-                            <a href="{% url 'certification_detail' cert.pk %}" class="btn btn-sm btn-info">View</a>
-                            <a href="{% url 'certification_update' cert.pk %}" class="btn btn-sm btn-warning">Edit</a>
-                            <a href="{% url 'certification_delete' cert.pk %}" class="btn btn-sm btn-danger">Delete</a>
+                            <a href="{% url 'resume_builder_web:certification_detail' cert.pk %}" class="btn btn-sm btn-info">View</a>
+                            <a href="{% url 'resume_builder_web:certification_update' cert.pk %}" class="btn btn-sm btn-warning">Edit</a>
+                            <a href="{% url 'resume_builder_web:certification_delete' cert.pk %}" class="btn btn-sm btn-danger">Delete</a>
                         </td>
                     </tr>
                     {% empty %}
