--- a/templates/resume_builder/education/education_form.html
+++ b/templates/resume_builder/education/education_form.html
@@ -56,7 +56,7 @@
                     {{ form.description }}
                 </div>
                 <div class="d-flex justify-content-between">
-                    <a href="{% url 'education_list' %}" class="btn btn-secondary">Cancel</a>
+                    <a href="{% url 'resume_builder_web:education_list' %}" class="btn btn-secondary">Cancel</a>
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </form>
