--- a/templates/resume_builder/education/education_list.html
+++ b/templates/resume_builder/education/education_list.html
@@ -4,7 +4,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h3>My Education</h3>
-        <a href="{% url 'education_create' %}" class="btn btn-primary">Add New</a>
+        <a href="{% url 'resume_builder_web:education_create' %}" class="btn btn-primary">Add New</a>
     </div>
     <div class="card shadow">
         <div class="card-body">
@@ -28,9 +28,9 @@
                         <td>{{ edu.end_date }}</td>
                         <td>{{ edu.gpa|default:"-" }}</td>
                         <td>
-                            <a href="{% url 'education_detail' edu.pk %}" class="btn btn-sm btn-info">View</a>
-                            <a href="{% url 'education_update' edu.pk %}" class="btn btn-sm btn-warning">Edit</a>
-                            <a href="{% url 'education_delete' edu.pk %}" class="btn btn-sm btn-danger">Delete</a>
+                            <a href="{% url 'resume_builder_web:education_detail' edu.pk %}" class="btn btn-sm btn-info">View</a>
+                            <a href="{% url 'resume_builder_web:education_update' edu.pk %}" class="btn btn-sm btn-warning">Edit</a>
+                            <a href="{% url 'resume_builder_web:education_delete' edu.pk %}" class="btn btn-sm btn-danger">Delete</a>
                         </td>
                     </tr>
                     {% empty %}
