--- a/templates/resume_builder/language/language_list.html
+++ b/templates/resume_builder/language/language_list.html
@@ -4,7 +4,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h3>My Languages</h3>
-        <a href="{% url 'language_create' %}" class="btn btn-primary">Add New</a>
+        <a href="{% url 'resume_builder_web:language_create' %}" class="btn btn-primary">Add New</a>
     </div>
     <div class="card shadow">
         <div class="card-body">
@@ -26,9 +26,9 @@
                         <td>{{ lang.certification|default:"None" }}</td>
                         <td>{{ lang.is_visible|yesno:"Yes,No" }}</td>
                         <td>
-                            <a href="{% url 'language_detail' lang.pk %}" class="btn btn-sm btn-info">View</a>
-                            <a href="{% url 'language_update' lang.pk %}" class="btn btn-sm btn-warning">Edit</a>
-                            <a href="{% url 'language_delete' lang.pk %}" class="btn btn-sm btn-danger">Delete</a>
+                            <a href="{% url 'resume_builder_web:language_detail' lang.pk %}" class="btn btn-sm btn-info">View</a>
+                            <a href="{% url 'resume_builder_web:language_update' lang.pk %}" class="btn btn-sm btn-warning">Edit</a>
+                            <a href="{% url 'resume_builder_web:language_delete' lang.pk %}" class="btn btn-sm btn-danger">Delete</a>
                         </td>
                     </tr>
                     {% empty %}
