--- a/templates/resume_builder/resume_list.html
+++ b/templates/resume_builder/resume_list.html
@@ -42,13 +42,13 @@ My Resumes - Resume Builder
                                                     <p class="card-text">{{ resume.summary|truncatewords:20 }}</p>
                                                 {% endif %}
                                                 <div class="d-flex gap-2 mt-3">
-                                                    <a href="{% url 'resume_detail' resume.pk %}" class="btn btn-primary btn-sm">
+                                                    <a href="{% url 'resume_builder_web:resume_detail' resume.pk %}" class="btn btn-primary btn-sm">
                                                         <i class="bi bi-eye"></i> View
                                                     </a>
-                                                    <a href="{% url 'resume_download_pdf' resume.pk %}" class="btn btn-danger btn-sm">
+                                                    <a href="{% url 'resume_builder_web:resume_download_pdf' resume.pk %}" class="btn btn-danger btn-sm">
                                                         <i class="bi bi-file-pdf"></i> PDF
                                                     </a>
-                                                    <a href="{% url 'resume_download_docx' resume.pk %}" class="btn btn-success btn-sm">
+                                                    <a href="{% url 'resume_builder_web:resume_download_docx' resume.pk %}" class="btn btn-success btn-sm">
                                                         <i class="bi bi-file-word"></i> DOCX
                                                     </a>
                                                 </div>
@@ -65,7 +65,7 @@ My Resumes - Resume Builder
                             <h4 class="mt-3">No Resumes Found</h4>
                             <p class="text-muted">You haven't created any resumes yet. Start building your professional resume!</p>
                             <div class="mt-4">
-                                <a href="{% url 'personal_information_create' %}" class="btn btn-primary btn-lg">
+                                <a href="{% url 'resume_builder_web:personal_information_create' %}" class="btn btn-primary btn-lg">
                                     <i class="bi bi-plus-circle"></i> Start Building Resume
                                 </a>
                             </div>
@@ -85,25 +85,25 @@ My Resumes - Resume Builder
                     <h5 class="card-title">Quick Actions</h5>
                     <div class="row">
                         <div class="col-md-3 mb-3">
-                            <a href="{% url 'personal_information_create' %}" class="btn btn-outline-primary w-100">
+                            <a href="{% url 'resume_builder_web:personal_information_create' %}" class="btn btn-outline-primary w-100">
                                 <i class="bi bi-person-plus"></i><br>
                                 Add Personal Info
                             </a>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <a href="{% url 'work_experience_create' %}" class="btn btn-outline-success w-100">
+                            <a href="{% url 'resume_builder_web:work_experience_create' %}" class="btn btn-outline-success w-100">
                                 <i class="bi bi-briefcase-fill"></i><br>
                                 Add Experience
                             </a>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <a href="{% url 'education_create' %}" class="btn btn-outline-info w-100">
+                            <a href="{% url 'resume_builder_web:education_create' %}" class="btn btn-outline-info w-100">
                                 <i class="bi bi-mortarboard-fill"></i><br>
                                 Add Education
                             </a>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <a href="{% url 'technical_skill_create' %}" class="btn btn-outline-warning w-100">
+                            <a href="{% url 'resume_builder_web:technical_skill_create' %}" class="btn btn-outline-warning w-100">
                                 <i class="bi bi-code-square"></i><br>
                                 Add Skills
                             </a>
